💄 fix weird word breaking/spacing in author list on some screens

--- a/frontend/styles/blog.scss
+++ b/frontend/styles/blog.scss
@@ -37,14 +37,6 @@ $blog-standout-width: 72rem;
   }
 }
 
-@include media-breakpoint-up(md) {
-  .blog-author-list {
-    display: flex;
-    align-items: center;
-    gap: 1ch;
-  }
-}
-
 .blog-author-images {
   display: flex;
 
